--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,21 @@
-<div (click)="showEditor()">
+<div  (click)="open(content)">
   div content 1
 </div>
 <div>
   div content 2
 </div>
-<span class="border border-primary">sfasfd</span>
+<button class="btn btn-lg btn-outline-primary" (click)="open(content)">Launch demo modal</button>
+<ng-template #content let-c="close" let-d="dismiss">
+<div class="modal-header">
+    <h4 class="modal-title">Modal title</h4>
+    <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <p>One fine body&hellip;</p>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="c('Close click')">Close</button>
+  </div>
+</ng-template>
