--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div  (click)="open(content)">
-  div content 1
+  {{data?.id}}
 </div>
 <div>
-  div content 2
+ 
 </div>
 <ng-template #content let-c="close" let-d="dismiss">
   <div class="modal-header">
